--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "flowbite": "^1.6.5",
         "tw-elements": "^1.0.0-beta2"
     }
 }
