--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "flowbite": "^1.6.5",
+        "leaflet": "^1.9.4",
         "tw-elements": "^1.0.0-beta2"
     }
 }
