--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "sibyx/phpgpx": "1.2.1"
+        "sibyx/phpgpx": "1.2.1",
+        "spatie/laravel-google-fonts": "^1.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.13",
