--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
         "laravel-vite-plugin": "^0.7.5",
         "postcss": "^8.4.23",
         "tailwindcss": "^3.3.2",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vite-plugin-manifest-sri": "^0.1.0"
     },
     "dependencies": {
         "flowbite": "^1.6.5",
         "leaflet": "^1.9.4",
+        "leaflet-gpx": "^1.7.0",
         "tw-elements": "^1.0.0-beta2"
     }
 }
