--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "livewire/livewire": "^2.12",
         "sibyx/phpgpx": "1.2.1",
         "spatie/laravel-google-fonts": "^1.2",
         "toin0u/geocoder-laravel": "^4.6"
