--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@defstudio/vite-livewire-plugin": "^1.1.0",
         "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
