--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
+        "psalm/plugin-laravel": "^2.8",
         "spatie/laravel-ignition": "^2.0",
         "vimeo/psalm": "^5.11"
     },
