--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 APP_NAME=Zdrava
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
+DEBUGBAR_ENABLED=true
 APP_URL=https://zdrava.mpolr.ru
 
 LOG_CHANNEL=stack
