--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "toin0u/geocoder-laravel": "^4.6"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.8",
         "barryvdh/laravel-ide-helper": "^2.13",
         "fakerphp/faker": "^1.22",
         "laravel/pint": "^1.0",
