--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "adriangibbons/php-fit-file-analysis": "^3.2",
         "geocoder-php/nominatim-provider": "^5.7",
         "guzzlehttp/guzzle": "^7.2",
+        "knyazevdev/gpx2png": "^1.3",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
