--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=false
 DEBUGBAR_ENABLED=true
-APP_URL=https://zdrava.mpolr.ru
+APP_URL=https://zdrava.online
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
