--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ DB_PASSWORD=
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=rabbitmq
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_COOKIE=__Host-zdrava_session
@@ -30,6 +30,12 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+RABBITMQ_QUEUE=default
+RABBITMQ_HOST=rabbitmq
+RABBITMQ_PORT=5672
+RABBITMQ_USER=user
+RABBITMQ_PASSWORD=password
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailpit
