Site: Set timezone to 'Europe/Moscow'

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_KEY=
 APP_DEBUG=false
 DEBUGBAR_ENABLED=true
 APP_URL=https://zdrava.online
+APP_TIMEZONE="Europe/Moscow"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
