Site: Store sessions in database

--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,8 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=rabbitmq
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
+SESSION_DRIVER=database
+SESSION_LIFETIME=525600
 SESSION_COOKIE=__Host-zdrava_session
 SESSION_SECURE_COOKIE=true
 
