Site: Update 'tw-elements', improved strava login encryption

--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
         "leaflet": "^1.9.4",
         "leaflet-gpx": "^1.7.0",
         "polyline-encoded": "^0.0.9",
-        "tw-elements": "^1.0.0-beta2"
+        "tw-elements": "1.0.0"
     }
 }
