--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.8",
         "barryvdh/laravel-ide-helper": "^2.13",
+        "driftingly/rector-laravel": "^0.26.2",
         "fakerphp/faker": "^1.22",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
@@ -32,6 +33,7 @@
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
         "psalm/plugin-laravel": "^2.8",
+        "rector/rector": "^0.18.6",
         "spatie/laravel-ignition": "^2.0",
         "vimeo/psalm": "^5.11"
     },
