Add encryption key for testing

--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME=Zdrava.online
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:WeYJ47xm68pFB8erJkq3hrPtB1wed5Stv0dJbHw8lG4=
 APP_DEBUG=true
 APP_URL=http://backend
 
