Site: Add logging to Telegram in some cases

--- a/.env.example
+++ b/.env.example
@@ -47,6 +47,9 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
+TELEGRAM_LOGGER_BOT_TOKEN=
+TELEGRAM_LOGGER_CHAT_ID=
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
