--- a/.env.example
+++ b/.env.example
@@ -50,6 +50,9 @@ MAIL_FROM_NAME="${APP_NAME}"
 TELEGRAM_LOGGER_BOT_TOKEN=
 TELEGRAM_LOGGER_CHAT_ID=
 
+SENTRY_LARAVEL_DSN=
+SENTRY_TRACES_SAMPLE_RATE=1.0
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
