--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "masmerise/livewire-toaster": "^1",
         "mpolr/fit-file-parser": "^1.0.0",
         "mpolr/php-fit-file-analysis": "^1.0",
+        "sentry/sentry-laravel": "^4.6",
         "sibyx/phpgpx": "1.3.0",
         "spatie/laravel-google-fonts": "^1.2",
         "toin0u/geocoder-laravel": "^4.6",
