--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "kravenor/gpx2png": "1.0.x-dev",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
+        "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
         "masmerise/livewire-toaster": "^1",
@@ -21,6 +22,8 @@
         "mpolr/php-fit-file-analysis": "^1.0",
         "sentry/sentry-laravel": "^4.6",
         "sibyx/phpgpx": "1.3.0",
+        "socialiteproviders/vkontakte": "^5.0",
+        "socialiteproviders/yandex": "^4.1",
         "spatie/laravel-google-fonts": "^1.2",
         "toin0u/geocoder-laravel": "^4.6",
         "vladimir-yuldashev/laravel-queue-rabbitmq": "^13.3"
