Site: Register service providers for socialite

--- a/.env.example
+++ b/.env.example
@@ -50,6 +50,14 @@ MAIL_FROM_NAME="${APP_NAME}"
 TELEGRAM_LOGGER_BOT_TOKEN=
 TELEGRAM_LOGGER_CHAT_ID=
 
+VKONTAKTE_CLIENT_ID=
+VKONTAKTE_CLIENT_SECRET=
+VKONTAKTE_REDIRECT_URI=
+
+YANDEX_CLIENT_ID=
+YANDEX_CLIENT_SECRET=
+YANDEX_REDIRECT_URI=
+
 SENTRY_LARAVEL_DSN=
 SENTRY_TRACES_SAMPLE_RATE=1.0
 
