--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite-plugin-manifest-sri": "^0.1.0"
     },
     "dependencies": {
+        "@sentry/browser": "^8.45.0",
         "alpinejs": "^3.13.5",
         "chart.js": "^4.4.1",
         "flowbite": "^1.6.5",
