--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "sibyx/phpgpx": "1.3.0",
         "socialiteproviders/vkontakte": "^5.0",
         "socialiteproviders/yandex": "^4.1",
+        "spatie/laravel-csp": "^2.10",
         "spatie/laravel-google-fonts": "^1.2",
         "toin0u/geocoder-laravel": "^4.6",
         "vladimir-yuldashev/laravel-queue-rabbitmq": "^13.3"
