--- a/.env.example
+++ b/.env.example
@@ -60,6 +60,9 @@ YANDEX_REDIRECT_URI=
 
 SENTRY_LARAVEL_DSN=
 SENTRY_TRACES_SAMPLE_RATE=1.0
+VITE_LARAVEL_FRONTEND_DSN=
+
+CSP_REPORT_URI=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
