Site: Add WebUSB & ANT+ USB tool page

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dependencies": {
         "@sentry/browser": "^8.45.0",
         "alpinejs": "^3.13.5",
+        "ant-plus-next": "^0.3.2",
         "chart.js": "^4.4.7",
+        "events": "^3.3.0",
         "flowbite": "^1.6.5",
         "leaflet": "^1.9.4",
         "leaflet-gpx": "^1.7.0",
