--- a/.env.testing
+++ b/.env.testing
@@ -2,17 +2,13 @@ APP_NAME=Zdrava.online
 APP_ENV=local
 APP_KEY=base64:WeYJ47xm68pFB8erJkq3hrPtB1wed5Stv0dJbHw8lG4=
 APP_DEBUG=true
-APP_URL=http://backend
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=database
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=homestead
+DB_CONNECTION=sqlite
+DB_DATABASE=:memory:
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -27,7 +23,7 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
+MAIL_HOST=mailpit
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
