--- a/.env.testing
+++ b/.env.testing
@@ -7,8 +7,12 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-DB_DATABASE=:memory:
+DB_CONNECTION=mysql
+DB_HOST=mariadb
+DB_PORT=3306
+DB_DATABASE=zdrava_testing
+DB_USERNAME=homestead
+DB_PASSWORD=homestead
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
