--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^2.12",
         "masmerise/livewire-toaster": "^1",
+        "mll-lab/graphql-php-scalars": "^6.4",
         "mpolr/fit-file-parser": "^1.0.0",
         "mpolr/php-fit-file-analysis": "^1.0",
         "nuwave/lighthouse": "^6.49",
