--- a/.drone.yml
+++ b/.drone.yml
@@ -1,6 +1,6 @@
 kind: pipeline
 type: docker
-name: default
+name: Deploy
 
 services:
   - name: mariadb
@@ -93,3 +93,13 @@ steps:
       - ./vendor/bin/phpunit --configuration phpunit.xml
     when:
       event: push
+
+  - name: deploy
+    image: appleboy/drone-ssh
+    settings:
+      host: 192.168.1.254
+      username: mpolr
+      key:
+        from_secret: SSH_PRIVATE_KEY
+      script:
+        - docker exec php82 sh -c "cd /var/www/zdrava.online && git pull origin master && composer install --no-dev --optimize-autoloader"
