--- a/.drone.yml
+++ b/.drone.yml
@@ -102,4 +102,7 @@ steps:
       key:
         from_secret: SSH_PRIVATE_KEY
       script:
-        - docker exec php82 sh -c "cd /var/www/zdrava.online && git pull origin master && composer install --no-dev --optimize-autoloader"
+        - docker exec php82 sh -c "git config --global --add safe.directory /var/www/zdrava.online"
+        - docker exec php82 sh -c "cd /var/www/zdrava.online && git pull --rebase origin master && composer install --optimize-autoloader"
+        - docker exec php82 sh -c "cd /var/www/zdrava.online && php artisan migrate"
+        - docker exec php82 sh -c "cd /var/www/zdrava.online && php artisan livewire:publish --assets"
