--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     },
     "devDependencies": {
         "@defstudio/vite-livewire-plugin": "^1.1.0",
+        "@tailwindcss/typography": "^0.5.16",
         "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
